tests/outref/TBP000.ref
Error with syntax near (line 7, column 1):

CREATE TABLE abc (
  id INTEGER PRIMARY KEY EXTRACT "abc"
  GLOBAL "someGLobal"
  PIECE "0"
  DELIM "|"
) DELIM "|"
END "keys(0)" GLOBAL "someGLobal";
^^^
syntax error, unexpected END, expecting SEMICOLON or ENDOFFILE

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE abc (
  id INTEGER PRIMARY KEY EXTRACT "abc"
  GLOBAL "someGLobal"
  PIECE "0"
  DELIM "|"
) DELIM "|"
END "keys(0)" GLOBAL "someGLobal";
